--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,5 +5,5 @@ const name = 'Hello World';
 ---
 
 <DefaultLayout>
-  <p class="text-lime-700">{name}</p>
+  <p class="p-4 text-center">The lighthouse keeper</p>
 </DefaultLayout>
